# tahu

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: testing.yml
compiler/tahuc/: Cargo.toml
compiler/tahuc/src/: main.rs
compiler/tahuc_ast/: Cargo.toml
compiler/tahuc_ast/src/: lib.rs  printer.rs  ty.rs
compiler/tahuc_codegen_llvm/: Cargo.toml
compiler/tahuc_codegen_llvm/src/: codegen.rs  function.rs  instruction.rs  lib.rs  ty.rs
compiler/tahuc_diagnostics/: Cargo.toml
compiler/tahuc_diagnostics/src/: context.rs  diagnostic.rs  lib.rs  reporter.rs  severity.rs  suggestion.rs
compiler/tahuc_driver/: Cargo.toml
compiler/tahuc_driver/src/: lib.rs
compiler/tahuc_driver/src/cmd/: help.rs  include.rs  linking.rs  mod.rs  opt.rs  output_name.rs  test.rs  version.rs
compiler/tahuc_hir/: Cargo.toml
compiler/tahuc_hir/src/: hir.rs  lib.rs  printer.rs
compiler/tahuc_lexer/: Cargo.toml
compiler/tahuc_lexer/src/: error.rs  lib.rs  number.rs  (+2 more)
compiler/tahuc_llvm/: Cargo.toml  build.rs
compiler/tahuc_mir/: Cargo.toml
compiler/tahuc_module/: Cargo.toml
compiler/tahuc_module/src/: config.rs  error.rs  lib.rs  resolver.rs
compiler/tahuc_parser/: Cargo.toml
compiler/tahuc_semantic/: Cargo.toml
compiler/tahuc_span/: Cargo.toml
example/if/: combine.tahu  multiple_nested.tahu  nested_inner_else.tahu  nested_inner_if.tahu
example/operator/: arithmetic.tahu  assignment.tahu  bitwise.tahu  comparison.tahu  enhance.tahu  logical.tahu  main.tahu  unary.tahu
test/: runner.py
test/integration/: fib.tahu
(+106 files in other folders)
