[package]
name = "tahuc_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
tahuc_lexer = { path = "../tahuc_lexer" }
tahuc_ast = { path = "../tahuc_ast" }
tahuc_parser = { path = "../tahuc_parser" }
tahuc_diagnostics = { path = "../tahuc_diagnostics" }
tahuc_span = { path = "../tahuc_span" }
tahuc_semantic = { path = "../tahuc_semantic" }
tahuc_hir = { path = "../tahuc_hir" }
tahuc_mir = { path = "../tahuc_mir" }
tahuc_llvm = { path = "../tahuc_llvm" }
